# metrics-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  warden.toml
app/: config.py  helpers.py  logging.py  main.py
app/core/: config.py  database.py  enums.py  logger.py  scopes.py  security.py
app/crud/: __init__.py  event_types.py  events.py  rate_limits.py  services.py
app/metrics/: __init__.py  routes.py  schema.py  services.py  view_schema.py  views.py
app/middleware/: logging.py  rate_limit.py  views.py
app/models/: _init__.py  api_key.py  event.py  event_type.py  rate_limit.py  service.py
app/models/api/: api_key.py  event_type.py  service.py
app/models/metrics/: event.py  page_view.py
app/routes/: routes.py
app/schemas/: event.py  event_type.py  rate_limit.py  services.py
app/services/: auth.py
app/status/: __init__.py  routes.py  services.py
jetbase/: env.py
jetbase/migrations/: V20260204.123550__auto_generated.sql  V20260204.123700__auto_generated.sql  V20260205.164500__auto_generated.sql  V20260205.194828__auto_generated.sql  V20260205.194835__auto_generated.sql
migrations/: 0001_auto_generated.sql  0002_auto_generated.sql  0003_add_prefix_to_api_keys.sql  0004_auto_generated.sql  0005_test.sql  0006_add_service_id_to_event_types.sql  V20260204.085531__auto_generated.sql
migrations/clickhouse/: clickhouse__0001_initial_clickhouse_models.sql
migrations/postgres/: postgres__0001_initial_postgres_models.sql
