[project]
name = "egos-api"
version = "0.1.0"
description = "EGO Services Main API"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "aiosqlite>=0.22.1",
    "aiochclient[aiohttp]>=2.6.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "dbwarden>=0.3.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastcrud>=0.21.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "rcon>=2.4.9",
    "redis[hiredis]>=6.0.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
